# study-buddy

./: .gitignore  LICENSE  README.md  app.py  constants.py  pyproject.toml  vosk_scripts.py
study_buddy/: courses.py  db.py  document_processors.py  notes.py  vectordb.py
study_buddy/dashboard/schemas/models/: user.py
study_buddy/dashboard/templates/: custom.html  layout.html
study_buddy/utilities/: constants.py  dbengine.py  encrypt_decrypt.py
