[tool.poetry]
name = "study-buddy"
version = "0.1.0"
description = "An LLM Powered Study Buddy."
authors = ["Porimol Chandro <porimolchandroroy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
fastapi-admin = "^1.0.4"
qdrant-client = "^1.9.2"
redis = "^5.0.7"
pydantic = "^2.7.4"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
youtube-transcript-api = "^0.6.2"
pytube = "^15.0.0"
pydub = "^0.25.1"
speechrecognition = "^3.10.4"
moviepy = "^1.0.3"
pymupdf = "^1.24.7"
uvicorn = "^0.30.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.1"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
requests-mock = "^1.12.1"
types-requests = "^2.32.0.20240622"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vosk_install = "vosk_scripts:vosk_install"
