[tool.poetry]
name = "study-buddy"
version = "0.1.0"
description = "An LLM Powered Study Buddy."
authors = ["Porimol Chandro <porimolchandroroy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
pillow = "^10.0.0"
telegram = "^0.0.1"
python-telegram-bot = "^21.5"
# pytelegrambotapi = "^4.22.1"
pyTelegramBotAPI = "^3.7.7"
langchain = "^0.2.16"
qdrant-client = "^1.11.1"
transformers = "^4.44.2"
pypdf = "^4.3.1"
pdf2image = "^1.17.0"
sentence-transformers = "^3.0.1"
langchain-community = "^0.2.16"
certifi = "^2024.8.30"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
